@@ -1,3 +1,13 @@
+2010-03-01  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Timothy Hatcher.
+
+        Web Inspector: use dejavu sans mono 11px on linux.
+
+        https://bugs.webkit.org/show_bug.cgi?id=35527
+
+        * inspector/front-end/inspector.css:
+
 2010-03-01  Thatcher Ulrich  <tulrich@google.com>
 
         Reviewed by Darin Fisher.
